[gd_scene load_steps=3 format=3 uid="uid://b6tutorial"]

[ext_resource type="Script" path="res://scripts/game/Tutorial.gd" id="1"]
[ext_resource type="Theme" path="res://resources/default_theme.tres" id="2"]

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.2, 0.95)

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="Container"]
text = "TUTORIAL_WELCOME"
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Container"]

[node name="StepIndicator" type="HBoxContainer" parent="Container"]
alignment = 1
theme_override_constants/separation = 10

[node name="Step1" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.2, 0.6, 1, 1)

[node name="Step2" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.3, 0.3, 0.3, 1)

[node name="Step3" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.3, 0.3, 0.3, 1)

[node name="Step4" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.3, 0.3, 0.3, 1)

[node name="Step5" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.3, 0.3, 0.3, 1)

[node name="Step6" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.3, 0.3, 0.3, 1)

[node name="Step7" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.3, 0.3, 0.3, 1)

[node name="Step8" type="ColorRect" parent="Container/StepIndicator"]
minimum_size = Vector2(60, 8)
color = Color(0.3, 0.3, 0.3, 1)

[node name="ContentPanel" type="PanelContainer" parent="Container"]
minimum_size = Vector2(0, 350)

[node name="VBox" type="VBoxContainer" parent="Container/ContentPanel"]
layout_mode = 2
margin = Rect2(20, 20, 20, 20)
theme_override_constants/separation = 20

[node name="StepTitle" type="Label" parent="Container/ContentPanel/VBox"]
text = "Step 1: Welcome"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="Container/ContentPanel/VBox"]
minimum_size = Vector2(0, 200)
text = "Welcome to Merchant Tails! In this tutorial, you'll learn the basics of trading and investment through our fantasy merchant simulation.

Your journey begins as an apprentice merchant in the capital city of Elm. You'll start with 1000 gold and work your way up to becoming a Master Merchant.

The key to success is simple: Buy low, sell high. But timing and strategy are everything!"
bbcode_enabled = true
fit_content = true

[node name="Hint" type="Label" parent="Container/ContentPanel/VBox"]
text = "ðŸ’¡ Tip: Watch market prices carefully - they change based on supply and demand!"
theme_override_colors/font_color = Color(0.8, 0.8, 0.3, 1)
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Container"]
alignment = 1
theme_override_constants/separation = 20

[node name="SkipButton" type="Button" parent="Container/ButtonContainer"]
minimum_size = Vector2(150, 50)
text = "TUTORIAL_SKIP"

[node name="PreviousButton" type="Button" parent="Container/ButtonContainer"]
minimum_size = Vector2(150, 50)
text = "TUTORIAL_PREVIOUS"
disabled = true

[node name="NextButton" type="Button" parent="Container/ButtonContainer"]
minimum_size = Vector2(150, 50)
text = "TUTORIAL_NEXT"

[node name="CompleteButton" type="Button" parent="Container/ButtonContainer"]
minimum_size = Vector2(150, 50)
text = "TUTORIAL_COMPLETE"
visible = false

[connection signal="pressed" from="Container/ButtonContainer/SkipButton" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="Container/ButtonContainer/PreviousButton" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Container/ButtonContainer/NextButton" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Container/ButtonContainer/CompleteButton" to="." method="_on_complete_pressed"]